Fixes #957 - Shore up assumptions regarding sequence order for adorned lists when adding new items